# SatelliteTracker

./: .pre-commit-config.yaml  Makefile  README.md  ResearchNotes.md  pyproject.toml
docker/: Dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
env_files/: .example.env
notebooks/: CelestrackAPI.ipynb
src/: app_factory.py  main.py  settings.py
src/satellite_tracker/api/api_v1/: api.py
src/satellite_tracker/api/api_v1/endpoints/: index.py
